jpackager --argument arg is broken

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • internal
    • Affects Version/s: internal
    • Component/s: tools

      This is regression from
      http://hg.openjdk.java.net/jdk/sandbox/rev/e094d5483bd6
      We changed SplitOptionIntoNameValue() to return true or false based if argument was split or not. It used to be true always.
      Parsing code only adds argument if this function returns true, so with change we ignoring all values in config file unless it is in form of A=B.

            Assignee:
            Andy Herrick (Inactive)
            Reporter:
            Andy Herrick (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: