8213166: jpackager --argument arg is broken

Reviewed-by: almatvee